--- a/package.json
+++ b/package.json
@@ -29,26 +29,26 @@
     "rxjs": "^6.5.4"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.0.0",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
-    "@types/express": "^4.17.3",
+    "@nestjs/cli": "7.0.0",
+    "@nestjs/schematics": "7.0.0",
+    "@nestjs/testing": "7.0.0",
+    "@types/express": "4.17.3",
     "@types/jest": "25.2.3",
-    "@types/node": "^13.9.1",
-    "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "3.0.2",
-    "@typescript-eslint/parser": "3.0.2",
-    "eslint": "7.1.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
+    "@types/node": "13.9.1",
+    "@types/supertest": "2.0.8",
+    "@typescript-eslint/eslint-plugin": "3.6.1",
+    "@typescript-eslint/parser": "3.6.1",
+    "eslint": "7.4.0",
+    "eslint-config-airbnb-base": "14.2.0",
+    "eslint-config-airbnb-typescript": "8.0.2",
+    "eslint-plugin-import": "2.22.0",
     "jest": "26.0.1",
-    "prettier": "^1.19.1",
-    "supertest": "^4.0.2",
+    "prettier": "1.19.1",
+    "supertest": "4.0.2",
     "ts-jest": "26.1.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "ts-loader": "6.2.1",
+    "ts-node": "8.6.2",
+    "tsconfig-paths": "3.9.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -63,5 +63,10 @@
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
