refactor(aliases & package.json & husky & elsint): aliases & package.json & husky & eslint
added aliases & npm run commit to package.json & added husky & i've fixed eslint errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
     "env": {
         "es2020": true,
-        "node": true
+        "node": true,
+        "mocha": true,
+        "jest": true
     },
     "extends": [
         "airbnb-base"
@@ -15,5 +17,20 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "max-len": [
+            "error",
+            150
+        ],
+        "import/no-unresolved": "off",
+        "no-useless-constructor": "off",
+        "no-unused-vars": "off",
+        "import/extensions": "off",
+        "no-empty-function": "off",
+        "indent": [
+            "error",
+            2
+        ],
+        "arrow-body-style": "off",
+        "class-methods-use-this": "off"
     }
 }
