updated config files

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,9 +1,9 @@
 {
   "generator-node": {
     "promptValues": {
-      "authorName": "wimmmly",
-      "authorEmail": "wimmmly@gmail.com",
-      "authorUrl": "https://github.com/igrokqq"
+      "authorName": "onix-systems",
+      "authorEmail": "sales@onix-systems.com",
+      "authorUrl": "https://onix-systems.com"
     }
   }
 }
