--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
   "name": "@onix-systems/generator-nestjs-boilerplate",
-  "version": "0.0.1",
+  "version": "1.0.0-beta",
   "description": "",
-  "author": "wimmmly",
+  "author": "onix-systems",
   "license": "MIT",
   "files": [
     "generators"
   ],
   "keywords": [
     "yeoman-generator",
-    "yeoman"
+    "typescript",
+    "node",
+    "nodejs",
+    "rest",
+    "restfull",
+    "api",
+    "builder",
+    "generator",
+    "mongo",
+    "ts",
+    "starter",
+    "mongodb",
+    "auth",
+    "js",
+    "swagger"
   ],
   "repository": {
     "url": "https://github.com/Onix-Systems/nest-js-boilerplate"
