updated config files

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -2,7 +2,7 @@
   "generator-node": {
     "promptValues": {
       "authorName": "onix-systems",
-      "authorEmail": "sales@onix-systems.com",
+      "authorEmail": "help@onix-systems.com",
       "authorUrl": "https://onix-systems.com"
     }
   }
