--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -3,7 +3,7 @@
     "promptValues": {
       "authorName": "onix-systems",
       "authorEmail": "help@onix-systems.com",
-      "authorUrl": "https://onix-systems.com"
+      "authorUrl": "https://github.com/Onix-Systems/nest-js-boilerplate"
     }
   }
 }
