--- a/generators/package.json
+++ b/generators/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-nest-js-boilerplate",
   "version": "1.0.3",
-  "description": "This generator will help you to build your own Nest.js Mongodb API using TypeScript 3.",
+  "description": "This generator will help you to build your own Nest.js Mongodb API using TypeScript 3",
   "author": "onix-systems",
   "license": "MIT",
   "files": [
