--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "generator-nest-js-boilerplate",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "This generator will help you to build your own Nest.js Mongodb API using TypeScript 3.",
   "author": "onix-systems",
   "license": "MIT",
   "files": [
-    "generators"
+    "generators",
+    "utils"
   ],
   "keywords": [
     "yeoman-generator",
