--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "generator-nest-js-boilerplate",
-  "version": "1.0.6",
-  "description": "This generator will help you to build your own Nest.js Mongodb API using TypeScript 3.",
+  "version": "1.0.7",
+  "description": "This generator will help you to build your own Nest.js Mongodb API using TypeScript 3",
   "author": "onix-systems",
   "license": "MIT",
   "files": [
     "generators",
     "utils"
   ],
+  "main": "generators/app/index.js",
   "keywords": [
     "yeoman-generator",
     "typescript",
