--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -22,23 +22,23 @@
     "deploy:heroku": "chmod +x ./deployHeroku.sh && sudo ./deployHeroku.sh"
   },
   "dependencies": {
-    "@nestjs/config": "^0.5.0",
-    "@nestjs/common": "^7.4.2",
-    "@nestjs/core": "^7.4.2",
-    "@nestjs/platform-express": "^7.4.2",
-    "@nestjs/testing": "^7.4.2",
-    "bcrypt": "^5.0.0",
-    "class-transformer": "^0.2.3",
-    "class-validator": "^0.12.2",
-    "express": "^4.17.1",
-    "husky": "^4.2.5",
-    "module-alias": "^2.2.2",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4",
-    "@nestjs/swagger": "^4.6.0",
-    "swagger-ui-express": "^4.1.4",
-    "open": "^7.2.1"
+    "@nestjs/config": "0.5.0",
+    "@nestjs/common": "7.4.2",
+    "@nestjs/core": "7.4.2",
+    "@nestjs/platform-express": "7.4.2",
+    "@nestjs/testing": "7.4.2",
+    "bcrypt": "5.0.0",
+    "class-transformer": "0.2.3",
+    "class-validator": "0.12.2",
+    "express": "4.17.1",
+    "husky": "4.2.5",
+    "module-alias": "2.2.2",
+    "reflect-metadata": "0.1.13",
+    "rimraf": "3.0.2",
+    "rxjs": "6.5.4",
+    "@nestjs/swagger": "4.6.0",
+    "swagger-ui-express": "4.1.4",
+    "open": "7.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "7.0.0",
@@ -47,6 +47,7 @@
     "@types/jest": "25.2.3",
     "@types/node": "13.9.1",
     "@types/supertest": "2.0.8",
+    "@types/bcrypt": "3.0.0",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
     "cz-conventional-changelog": "3.2.0",
@@ -94,7 +95,10 @@
     "@guards": "./dist/guards",
     "@interfaces": "./dist/interfaces",
     "@pipes": "./dist/pipes",
-    "@dto": "./dist/dto"
+    "@dto": "./dist/dto",
+    "@responses": "./dist/responses",
+    "@interceptors": "./dist/interceptors",
+    "@decorators": "./dist/decorators"
   },
   "husky": {
     "hooks": {
