--- a/generators/auth/templates/mongodb/jwt/_.env
+++ b/generators/auth/templates/mongodb/jwt/_.env
@@ -1,1 +1,13 @@
 SERVER_PORT=<%= config.serverPort %>
+
+<% if(config.wantedDocker === 'Yes') { %>
+MONGODB_URL=mongodb://mongodb:27017/app
+REDIS_URL=redis://redis:6379
+<% } %>
+
+<% if(config.wantedDocker === 'No') { %>
+MONGODB_URL=mongodb://localhost:27017/app
+REDIS_URL=redis://localhost:6379
+<% } %>
+
+
