--- a/generators/auth/templates/mongodb/jwt/tsconfig.json
+++ b/generators/auth/templates/mongodb/jwt/tsconfig.json
@@ -8,17 +8,21 @@
     "allowSyntheticDefaultImports": true,
     "target": "es2017",
     "sourceMap": true,
-    "outDir": "../../../app/templates/dist",
+    "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
+    "strict": true,
     "paths": {
       "@filters/*": ["./src/filters/*"],
       "@guards/*": ["./src/guards/*"],
+      "@interfaces/*": ["./src/interfaces/*"],
       "@shared/*": ["./src/components/shared/*"],
       "@components/*": ["./src/components/*"],
       "@pipes/*": ["./src/pipes/*"],
-      "@interfaces/*": ["../../../app/templates/src/interfaces/*"],
-      "@dto/*": ["./src/dto/*"]
+      "@dto/*": ["./src/dto/*"],
+      "@responses/*": ["./src/responses/*"],
+      "@interceptors/*": ["./src/interceptors/*"],
+      "@decorators/*": ["./src/decorators/*"]
     }
   }
 }
