--- a/generators/auth/templates/mysql/jwt/_.env
+++ b/generators/auth/templates/mysql/jwt/_.env
@@ -2,6 +2,18 @@ SERVER_PORT=<%= config.serverPort %>
 
 MYSQL_ROOT_USER=root
 MYSQL_PASSWORD=1234
+
+<% if(config.wantedDocker === 'Yes') { %>
 MYSQL_URL=mysql://mysql:3306/app
 
 REDIS_URL=redis://redis:6379
+<% } %>
+
+<% if(config.wantedDocker === 'No') { %>
+MYSQL_URL=mysql://localhost:3306/app
+
+REDIS_URL=redis://localhost:6379
+<% } %>
+
+
+
