--- a/generators/auth/templates/mysql/jwt/_.env
+++ b/generators/auth/templates/mysql/jwt/_.env
@@ -1,18 +1,29 @@
 SERVER_PORT=<%= config.serverPort %>
 
+<% if(config.wantedDocker === 'Yes') { %>
+SERVER_PORT=3000
+
 MYSQL_ROOT_USER=root
 MYSQL_PASSWORD=1234
-
-<% if(config.wantedDocker === 'Yes') { %>
 MYSQL_URL=mysql://mysql:3306/app
+MYSQL_HOST=mysql
+MYSQL_PORT=3306
+MYSQL_DB=app
 
 REDIS_URL=redis://redis:6379
 <% } %>
 
 <% if(config.wantedDocker === 'No') { %>
-MYSQL_URL=mysql://localhost:3306/app
+SERVER_PORT=3000
 
-REDIS_URL=redis://localhost:6379
+MYSQL_ROOT_USER=root
+MYSQL_PASSWORD=1234
+MYSQL_URL=mysql://127.0.0.1:3306/app
+MYSQL_HOST=mysql
+MYSQL_PORT=3306
+MYSQL_DB=app
+
+REDIS_URL=redis://127.0.0.1:6379
 <% } %>
 
 
