--- a/generators/auth/templates/mongodb/passportLocal/_mongodb-docker-compose.yml
+++ b/generators/auth/templates/mongodb/passportLocal/_mongodb-docker-compose.yml
@@ -5,15 +5,15 @@ services:
       context: .
       dockerfile: ./docker/App.Dockerfile
     container_name: app
+    command: bash -c "npm run start:dev"
+    working_dir: /var/www/app
     volumes:
       - ./:/var/www/app:cached
-      - /var/www/app/node_modules # anonymous volume for node_modules only
     restart: always
     ports:
       - 3000:3000
     links:
       - mongodb
-      - redis
 
   mongodb:
     container_name: mongodb
@@ -21,9 +21,3 @@ services:
     restart: always
     ports:
       - 27017:27017
-
-  redis:
-    image: redis:6
-    restart: always
-    ports:
-      - 6379:6379
