--- a/generators/app/templates/tsconfig.json
+++ b/generators/app/templates/tsconfig.json
@@ -13,6 +13,7 @@
     "incremental": true,
     "strict": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "paths": {
       "@filters/*": ["./src/filters/*"],
       "@guards/*": ["./src/guards/*"],
