feat(mongodb jwt exceptions): add mongodb jwt exceptions validation
add mongodb jwt exceptions validation

--- a/generators/auth/templates/mongodb/jwt/tsconfig.json
+++ b/generators/auth/templates/mongodb/jwt/tsconfig.json
@@ -14,6 +14,7 @@
     "strict": true,
     "esModuleInterop": true,
     "paths": {
+      "@exceptions/*": ["./src/exceptions/*"],
       "@filters/*": ["./src/filters/*"],
       "@guards/*": ["./src/guards/*"],
       "@interfaces/*": ["./src/interfaces/*"],
