apply json api spec for errors

--- a/generators/package.json
+++ b/generators/package.json
@@ -71,6 +71,7 @@
     "hbs": "^4.1.1",
     "husky": "4.2.5",
     "ioredis": "4.17.3",
+    "jsonapi-serializer": "3.6.7",
     "module-alias": "2.2.2",
     "mongodb": "3.5.9",
     "mongoose": "^5.10.4",
@@ -100,6 +101,7 @@
     "@types/express-handlebars": "^3.1.0",
     "@types/express-session": "^1.17.0",
     "@types/jest": "25.2.3",
+    "@types/jsonapi-serializer": "3.6.3",
     "@types/mongoose": "^5.7.36",
     "@types/node": "13.9.1",
     "@types/passport-google-oauth20": "2.0.3",
