--- a/generators/package.json
+++ b/generators/package.json
@@ -75,6 +75,7 @@
     "module-alias": "2.2.2",
     "mongodb": "3.5.9",
     "mongoose": "5.12.3",
+    "nest-router": "1.0.9",
     "nestjs-redis": "1.3.3",
     "open": "7.2.1",
     "passport": "0.4.1",
