--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -19,7 +19,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "commit": "git-cz",
-    "deploy:heroku": "chmod +x ./deployHeroku.sh && sudo ./deployHeroku.sh"
+    "deploy:heroku": "chmod +x ./deployHeroku.sh && sudo ./deployHeroku.sh",
+    "docs": "typedoc --options typedoc.json"
   },
   "dependencies": {
     "@nestjs/config": "0.5.0",
