feat(serialization): add serialization
add serialization

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -114,7 +114,8 @@
     "@dto": "./dist/dto",
     "@responses": "./dist/responses",
     "@interceptors": "./dist/interceptors",
-    "@decorators": "./dist/decorators"
+    "@decorators": "./dist/decorators",
+    "@utils": "./dist/utils"
   },
   "husky": {
     "hooks": {
