--- a/generators/app/templates/tsconfig.json
+++ b/generators/app/templates/tsconfig.json
@@ -26,7 +26,8 @@
       "@interceptors/*": ["./src/interceptors/*"],
       "@decorators/*": ["./src/decorators/*"],
       "@v1/*": ["src/routes/v1/*"],
-      "@exceptions/*": ["./src/exceptions/*"]
+      "@exceptions/*": ["./src/exceptions/*"],
+      "@utils/*": ["./src/utils/*"]
     }
   }
 }
