--- a/generators/package.json
+++ b/generators/package.json
@@ -74,7 +74,7 @@
     "jsonapi-serializer": "3.6.7",
     "module-alias": "2.2.2",
     "mongoose": "5.13.7",
-    "nestjs-redis": "1.3.3",
+    "nestjs-redis": "git+https://github.com/GyanendroKh/nestjs-redis.git#nest8-fix",
     "open": "8.2.1",
     "passport": "0.4.1",
     "passport-google-oauth20": "2.0.0",
