--- a/generators/package.json
+++ b/generators/package.json
@@ -46,82 +46,82 @@
     "commit": "git-cz"
   },
   "dependencies": {
-    "@nestjs/common": "8.0.6",
-    "@nestjs/config": "1.0.1",
-    "@nestjs/core": "8.0.6",
+    "@nestjs/common": "8.3.1",
+    "@nestjs/config": "1.2.0",
+    "@nestjs/core": "8.3.1",
     "@nestjs/jwt": "8.0.0",
-    "@nestjs/mongoose": "8.0.1",
-    "@nestjs/passport": "8.0.1",
-    "@nestjs/platform-express": "8.0.6",
-    "@nestjs/swagger": "5.0.9",
-    "@nestjs/testing": "8.0.6",
-    "@nestjs/typeorm": "8.0.2",
+    "@nestjs/mongoose": "9.0.2",
+    "@nestjs/passport": "8.2.1",
+    "@nestjs/platform-express": "8.3.1",
+    "@nestjs/swagger": "5.2.0",
+    "@nestjs/testing": "8.3.1",
+    "@nestjs/typeorm": "8.0.3",
     "bcrypt": "5.0.1",
-    "chalk": "4.1.2",
-    "class-transformer": "0.4.0",
-    "class-validator": "0.13.1",
+    "chalk": "5.0.0",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.13.2",
     "connect-flash": "0.1.1",
-    "connect-mongodb-session": "3.0.0",
-    "connect-redis": "6.0.0",
-    "cookie-parser": "1.4.5",
-    "express": "4.17.1",
-    "express-handlebars": "5.3.3",
-    "express-mysql-session": "2.1.6",
+    "connect-mongodb-session": "3.1.1",
+    "connect-redis": "6.1.1",
+    "cookie-parser": "1.4.6",
+    "express": "4.17.3",
+    "express-handlebars": "6.0.2",
+    "express-mysql-session": "2.1.7",
     "express-session": "1.17.2",
-    "hbs": "4.1.2",
-    "husky": "7.0.1",
-    "ioredis": "4.27.7",
+    "hbs": "4.2.0",
+    "husky": "7.0.4",
+    "ioredis": "4.28.5",
     "jsonapi-serializer": "3.6.7",
     "module-alias": "2.2.2",
-    "mongoose": "5.13.7",
-    "nestjs-redis": "git+https://github.com/GyanendroKh/nestjs-redis.git#nest8-fix",
-    "open": "8.2.1",
+    "mongoose": "6.2.2",
+    "nestjs-redis": "git+https://github.com/GyanendroKh/nestjs-redis.git#2d00f67c",
+    "open": "8.4.0",
     "passport": "0.4.1",
     "passport-google-oauth20": "2.0.0",
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0",
     "print-message": "3.0.1",
-    "redis": "3.1.2",
+    "redis": "4.0.3",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
-    "rxjs": "7.3.0",
-    "swagger-ui-express": "4.1.6",
-    "ts-node": "10.2.0",
-    "typeorm": "0.2.37",
-    "yeoman-generator": "5.4.1",
+    "rxjs": "7.5.4",
+    "swagger-ui-express": "4.3.0",
+    "ts-node": "10.5.0",
+    "typeorm": "0.2.43",
+    "yeoman-generator": "5.6.1",
     "yosay": "2.0.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "8.1.1",
-    "@nestjs/schematics": "8.0.2",
+    "@nestjs/cli": "8.2.1",
+    "@nestjs/schematics": "8.0.6",
     "@types/connect-flash": "0.0.37",
-    "@types/connect-redis": "0.0.17",
+    "@types/connect-redis": "0.0.18",
     "@types/express": "4.17.13",
-    "@types/express-handlebars": "5.3.1",
+    "@types/express-handlebars": "6.0.0",
     "@types/express-session": "1.17.4",
-    "@types/jest": "27.0.1",
-    "@types/jsonapi-serializer": "3.6.4",
-    "@types/node": "16.6.1",
-    "@types/passport-google-oauth20": "2.0.9",
+    "@types/jest": "27.4.1",
+    "@types/jsonapi-serializer": "3.6.5",
+    "@types/node": "17.0.20",
+    "@types/passport-google-oauth20": "2.0.11",
     "@types/passport-jwt": "3.0.6",
     "@types/passport-local": "1.0.34",
-    "@types/redis": "2.8.31",
+    "@types/redis": "4.0.11",
     "@types/supertest": "2.0.11",
-    "@typescript-eslint/eslint-plugin": "4.29.2",
-    "@typescript-eslint/parser": "4.29.2",
+    "@typescript-eslint/eslint-plugin": "5.12.1",
+    "@typescript-eslint/parser": "5.12.1",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "7.32.0",
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-config-airbnb-typescript": "12.3.1",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.24.0",
-    "jest": "27.0.6",
-    "prettier": "2.3.2",
-    "supertest": "6.1.5",
-    "ts-jest": "27.0.5",
-    "ts-loader": "9.2.5",
-    "tsconfig-paths": "3.10.1",
-    "typescript": "4.3.5"
+    "eslint": "8.9.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "16.1.0",
+    "eslint-config-prettier": "8.4.0",
+    "eslint-plugin-import": "2.25.4",
+    "jest": "27.5.1",
+    "prettier": "2.5.1",
+    "supertest": "6.2.2",
+    "ts-jest": "27.1.3",
+    "ts-loader": "9.2.6",
+    "tsconfig-paths": "3.12.0",
+    "typescript": "4.5.5"
   },
   "config": {
     "commitizen": {
