--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -35,7 +35,9 @@
     "bcrypt": "5.0.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
+    "connect-mongodb-session": "3.1.1",
     "express": "4.17.3",
+    "express-session": "1.17.2",
     "husky": "7.0.4",
     "ioredis": "4.28.5",
     "jsonapi-serializer": "3.6.7",
@@ -44,6 +46,7 @@
     "nest-router": "1.0.9",
     "nestjs-redis": "1.3.3",
     "open": "8.4.0",
+    "passport-google-oauth20": "2.0.0",
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0",
     "reflect-metadata": "0.1.13",
@@ -60,6 +63,8 @@
     "@types/jsonapi-serializer": "3.6.5",
     "@types/lodash": "4.14.178",
     "@types/node": "17.0.18",
+    "@types/passport-jwt": "3.0.6",
+    "@types/passport-local": "1.0.34",
     "@types/supertest": "2.0.11",
     "@typescript-eslint/eslint-plugin": "5.12.0",
     "@typescript-eslint/parser": "5.12.0",
