--- a/generators/auth/templates/postgresql/jwt/_.env
+++ b/generators/auth/templates/postgresql/jwt/_.env
@@ -1,17 +1,17 @@
-SERVER_PORT=<%= config.serverPort %>
+SERVER_PORT="<%= config.serverPort %>"
 
 POSTGRESQL_ROOT_USER=postgres
-POSTGRESQL_PASSWORD=1234
+POSTGRESQL_PASSWORD=postgres
 POSTGRESQL_PORT=5432
 POSTGRESQL_DB=postgres
 
-<% if(config.wantedDocker === 'Yes') { %>
+<% if(config.wantedDocker=== 'Yes') { %>"
 POSTGRESQL_HOST=postgres
 
 REDIS_URL=redis://redis:6379
 <% } %>
 
-<% if(config.wantedDocker === 'No') { %>
+<% if(config.wantedDocker=== 'No') { %>"
 POSTGRESQL_HOST=127.0.0.1
 
 REDIS_URL=redis://127.0.0.1:6379
