--- a/generators/package.json
+++ b/generators/package.json
@@ -56,7 +56,7 @@
     "@nestjs/swagger": "5.2.0",
     "@nestjs/testing": "8.3.1",
     "@nestjs/typeorm": "8.0.3",
-    "bcrypt": "5.0.1",
+    "bcryptjs": "2.4.3",
     "chalk": "5.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
