--- a/generators/auth/templates/mongodb/oauth2/_.env
+++ b/generators/auth/templates/mongodb/oauth2/_.env
@@ -7,18 +7,17 @@ OAUTH2_GOOGLE_CALLBACK_URL=<%= config.oauth2CallbackUrl %>
 
 PASSPORT_SESSION_SECRET=<%= config.passportSessionSecret %>
 
-REDIS_PORT=6379
-
-<% if(config.wantedDocker === 'Yes') { %>
-REDIS_URL=redis://redis:6379
-REDIS_HOST=redis
-
 MONGODB_URL=mongodb://mongodb:27017/app
+
+<% if(config.sessionsStorage === 'redis') { %>
+REDIS_HOST=redis
+REDIS_PORT=6379
 <% } %>
 
-<% if(config.wantedDocker === 'No') { %>
-REDIS_URL=redis://localhost:6379
-REDIS_HOST=127.0.0.1
-
-MONGODB_URL=mongodb://localhost:27017/app
+<% if(config.sessionsStorage === 'mysql') { %>
+MYSQL_ROOT_USER=root
+MYSQL_PASSWORD=1234
+MYSQL_HOST=mysql
+MYSQL_PORT=3306
+MYSQL_DB=app
 <% } %>
