--- a/generators/auth/templates/mysql/oauth2/_.env
+++ b/generators/auth/templates/mysql/oauth2/_.env
@@ -12,14 +12,11 @@ MYSQL_HOST=mysql
 MYSQL_PORT=3306
 MYSQL_DB=app
 
-<% if(config.wantedDocker === 'Yes') { %>
-MONGODB_URL=mongodb://mongodb:27017/app
-
-MYSQL_URL=mysql://mysql:3306/app
+<% if(config.sessionsStorage === 'redis') { %>
+REDIS_HOST=redis
+REDIS_PORT=6379
 <% } %>
 
-<% if(config.wantedDocker === 'No') { %>
-MONGODB_URL=mongodb://localhost:27017/app
-
-MYSQL_URL=mysql://mysql:3306/app
+<% if(config.sessionsStorage === 'mongodb') { %>
+MONGODB_URL=mongodb://mongodb:27017/app
 <% } %>
