fix(auth): fix passport-google-oauth20 package version issue and update env file templates

--- a/generators/auth/templates/mysql/passportLocal/_.env
+++ b/generators/auth/templates/mysql/passportLocal/_.env
@@ -9,14 +9,11 @@ MYSQL_HOST=mysql
 MYSQL_PORT=3306
 MYSQL_DB=app
 
-<% if(config.wantedDocker === 'Yes') { %>
-MYSQL_URL=mysql://mysql:3306/app
-
-MONGODB_URL=mongodb://mongodb:27017/app
+<% if(config.sessionsStorage === 'redis') { %>
+REDIS_HOST=redis
+REDIS_PORT=6379
 <% } %>
 
-<% if(config.wantedDocker === 'No') { %>
-MYSQL_URL=mysql://127.0.0.1:3306/app
-
+<% if(config.sessionsStorage === 'mongodb') { %>
 MONGODB_URL=mongodb://127.0.0.1:27017/app
 <% } %>
