--- a/generators/auth/templates/mongodb/passportLocal/_.env
+++ b/generators/auth/templates/mongodb/passportLocal/_.env
@@ -3,17 +3,18 @@ SERVER_HOST=<%= config.serverHost %>:<%= config.serverPort %>
 
 PASSPORT_SESSION_SECRET=<%= config.passportSessionSecret %>
 
-<% if(config.wantedDocker === 'Yes') { %>
-MONGODB_URL='mongodb://mongodb:27017/app'
+MONGODB_URL=mongodb://127.0.0.1:27017/app
 
-REDIS_URL=redis://redis:6379
+<% if(config.sessionsStorage === 'redis') { %>
 REDIS_HOST=redis
+REDIS_PORT=6379
 <% } %>
 
-<% if(config.wantedDocker === 'No') { %>
-MONGODB_URL=mongodb://localhost:27017/app
-
-REDIS_URL=redis://localhost:6379
-REDIS_HOST=localhost
+<% if(config.sessionsStorage === 'mysql') { %>
+MYSQL_ROOT_USER=root
+MYSQL_PASSWORD=1234
+MYSQL_HOST=mysql
+MYSQL_PORT=3306
+MYSQL_DB=app
 <% } %>
 
