fix(auth): fix types and a env file

--- a/generators/auth/templates/postgresql/jwt/_.env
+++ b/generators/auth/templates/postgresql/jwt/_.env
@@ -5,13 +5,13 @@ POSTGRESQL_PASSWORD=postgres
 POSTGRESQL_PORT=5432
 POSTGRESQL_DB=postgres
 
-<% if(config.wantedDocker=== 'Yes') { %>"
+<% if(config.wantedDocker=== 'Yes') { %>
 POSTGRESQL_HOST=postgres
 
 REDIS_URL=redis://redis:6379
 <% } %>
 
-<% if(config.wantedDocker=== 'No') { %>"
+<% if(config.wantedDocker=== 'No') { %>
 POSTGRESQL_HOST=127.0.0.1
 
 REDIS_URL=redis://127.0.0.1:6379
