feat: add adminjs

--- a/generators/auth/templates/mongodb/jwt/_.env
+++ b/generators/auth/templates/mongodb/jwt/_.env
@@ -11,4 +11,7 @@ MONGODB_URL=mongodb://localhost:27017/app
 REDIS_URL=redis://localhost:6379
 <% } %>
 
-
+<% if(config.wantedAdminPanel === 'Yes') { %>
+ADMIN_COOKIE_NAME=name
+ADMIN_COOKIE_PASSWORD=password
+<% } %>
