--- a/generators/auth/templates/mongodb/oauth2/_.env
+++ b/generators/auth/templates/mongodb/oauth2/_.env
@@ -9,6 +9,11 @@ PASSPORT_SESSION_SECRET=<%= config.passportSessionSecret %>
 
 MONGODB_URL=mongodb://mongodb:27017/app
 
+<% if(config.wantedAdminPanel === 'Yes') { %>
+ADMIN_COOKIE_NAME=name
+ADMIN_COOKIE_PASSWORD=password
+<% } %>
+
 <% if(config.sessionsStorage === 'redis') { %>
 REDIS_HOST=redis
 REDIS_PORT=6379
