--- a/generators/mailer/templates/mongodb/jwt/_.env
+++ b/generators/mailer/templates/mongodb/jwt/_.env
@@ -11,6 +11,11 @@ MONGODB_URL=mongodb://localhost:27017/app
 REDIS_URL=redis://localhost:6379
 <% } %>
 
+<% if(config.wantedAdminPanel === 'Yes') { %>
+ADMIN_COOKIE_NAME=name
+ADMIN_COOKIE_PASSWORD=password
+<% } %>
+
 MAILER_USERNAME=<%= config.mailerUsername %>
 MAILER_PORT=<%= config.mailerPort %>
 MAILER_PASSWORD=<%= config.mailerPassword %>
