--- a/generators/mailer/templates/mongodb/passportLocal/_.env
+++ b/generators/mailer/templates/mongodb/passportLocal/_.env
@@ -17,6 +17,11 @@ REDIS_URL=redis://localhost:6379
 REDIS_HOST=localhost
 <% } %>
 
+<% if(config.wantedAdminPanel === 'Yes') { %>
+ADMIN_COOKIE_NAME=name
+ADMIN_COOKIE_PASSWORD=password
+<% } %>
+
 MAILER_USERNAME=<%= config.mailerUsername %>
 MAILER_PORT=<%= config.mailerPort %>
 MAILER_PASSWORD=<%= config.mailerPassword %>
