--- a/generators/auth/templates/mongodb/passportLocal/_.env
+++ b/generators/auth/templates/mongodb/passportLocal/_.env
@@ -5,6 +5,11 @@ PASSPORT_SESSION_SECRET=<%= config.passportSessionSecret %>
 
 MONGODB_URL=mongodb://127.0.0.1:27017/app
 
+<% if(config.wantedAdminPanel === 'Yes') { %>
+ADMIN_COOKIE_NAME=name
+ADMIN_COOKIE_PASSWORD=password
+<% } %>
+
 <% if(config.sessionsStorage === 'redis') { %>
 REDIS_HOST=redis
 REDIS_PORT=6379
