fix(adminjs/env/redis): fixed issues with adminjs, env and redis connect

--- a/generators/prisma/templates/mongodb/jwt/.env
+++ b/generators/prisma/templates/mongodb/jwt/.env
@@ -6,7 +6,7 @@
 
 SERVER_PORT=3000
 
-DATABASE_URL="mongodb+srv://test:test@cluster0.f6otick.mongodb.net/%3FretryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://test:test@test.erkwlmq.mongodb.net/%3FretryWrites=true&w=majority"
 
 MONGO_USERNAME="test"
 MONGO_PASSWORD="test"
