--- a/generators/prisma/templates/mongodb/oauth2/.env
+++ b/generators/prisma/templates/mongodb/oauth2/.env
@@ -5,9 +5,17 @@ OAUTH2_GOOGLE_CLIENT_SECRET=456
 OAUTH2_GOOGLE_CLIENT_ID=123
 OAUTH2_GOOGLE_CALLBACK_URL=http://localhost:3000/google/redirect
 
-PASSPORT_SESSION_SECRET=hello-world
+DATABASE_URL="mongodb+srv://test:test@test.erkwlmq.mongodb.net/%3FretryWrites=true&w=majority"
 
-DATABASE_URL="mongodb+srv://test:test@cluster0.f6otick.mongodb.net/%3FretryWrites=true&w=majority"
+<% if(config.wantedDocker === 'Yes') { %>
+MONGODB_URL=mongodb://mongodb:27017/app
+REDIS_URL=redis://redis:6379
+<% } %>
+
+<% if(config.wantedDocker === 'No') { %>
+MONGODB_URL=mongodb://localhost:27017/app
+REDIS_URL=redis://localhost:6379
+<% } %>
 
 MONGO_USERNAME="test"
 MONGO_PASSWORD="test"
