--- a/generators/prisma/templates/mongodb/oauth2/_.env
+++ b/generators/prisma/templates/mongodb/oauth2/_.env
@@ -7,7 +7,15 @@ OAUTH2_GOOGLE_CALLBACK_URL=<%= config.oauth2CallbackUrl %>
 
 PASSPORT_SESSION_SECRET=<%= config.passportSessionSecret %>
 
+<% if(config.wantedDocker === 'Yes') { %>
 MONGODB_URL=mongodb://mongodb:27017/app
+REDIS_URL=redis://redis:6379
+<% } %>
+
+<% if(config.wantedDocker === 'No') { %>
+MONGODB_URL=mongodb://localhost:27017/app
+REDIS_URL=redis://localhost:6379
+<% } %>
 
 <% if(config.wantedAdminPanel === 'Yes') { %>
 ADMIN_COOKIE_NAME=name
