--- a/generators/prisma/templates/mongodb/passportLocal/.env
+++ b/generators/prisma/templates/mongodb/passportLocal/.env
@@ -1,8 +1,6 @@
 SERVER_PORT=5000
 
-DATABASE_URL=mongodb+srv://test:test@passportlocal.ae9ioeu.mongodb.net/%3FretryWrites=true&w=majority
-
-REDIS_URL=redis://redis:6379
+DATABASE_URL=mongodb+srv://test:test@test.erkwlmq.mongodb.net/%3FretryWrites=true&w=majority
 
 MONGO_USERNAME="test"
 MONGO_PASSWORD="test"
