--- a/generators/prisma/templates/mysql/jwt/.env
+++ b/generators/prisma/templates/mysql/jwt/.env
@@ -11,10 +11,18 @@ MYSQL_PASSWORD=1234
 MYSQL_PORT=3306
 MYSQL_DB=app
 
+<% if(config.wantedDocker === 'Yes') { %>
+MYSQL_HOST=mysql
 
-MYSQL_HOST=localhost
+REDIS_URL=redis://redis:6379
+<% } %>
+
+<% if(config.wantedDocker === 'No') { %>
+MYSQL_HOST=127.0.0.1
+
+REDIS_URL=redis://127.0.0.1:6379
+<% } %>
 
 
 DATABASE_URL="mysql://root:1234@localhost:3306/app"
 
-REDIS_URL=redis://localhost:6379
