refactor(env): changed env file

--- a/generators/prisma-casl/templates/mongodb/oauth2/.env
+++ b/generators/prisma-casl/templates/mongodb/oauth2/.env
@@ -1,9 +1,11 @@
-SERVER_PORT=3000
-SERVER_HOST=http://localhost:3000
+SERVER_PORT=<%= config.serverPort %>
+SERVER_HOST=<%= config.serverHost %>:<%= config.serverPort %>
 
-OAUTH2_GOOGLE_CLIENT_SECRET=456
-OAUTH2_GOOGLE_CLIENT_ID=123
-OAUTH2_GOOGLE_CALLBACK_URL=http://localhost:3000/google/redirect
+OAUTH2_GOOGLE_CLIENT_SECRET=<%= config.oauth2ClientSecret %>
+OAUTH2_GOOGLE_CLIENT_ID=<%= config.oauth2ClientId %>
+OAUTH2_GOOGLE_CALLBACK_URL=<%= config.oauth2CallbackUrl %>
+
+PASSPORT_SESSION_SECRET=<%= config.passportSessionSecret %>
 
 DATABASE_URL="mongodb+srv://test:test@test.erkwlmq.mongodb.net/%3FretryWrites=true&w=majority"
 
