--- a/generators/prisma-casl/templates/mongodb/passportLocal/.env
+++ b/generators/prisma-casl/templates/mongodb/passportLocal/.env
@@ -1,4 +1,4 @@
-SERVER_PORT=5000
+SERVER_PORT=<%= config.serverPort %>
 
 DATABASE_URL=mongodb+srv://test:test@test.erkwlmq.mongodb.net/%3FretryWrites=true&w=majority
 
