--- a/generators/prisma-casl/templates/mongodb/jwt/.env
+++ b/generators/prisma-casl/templates/mongodb/jwt/.env
@@ -4,8 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-SERVER_PORT=3000
-
+SERVER_PORT=<%= config.serverPort %>
 
 MONGO_USERNAME="test"
 MONGO_PASSWORD="test"
