--- a/generators/prisma-casl/templates/mysql/oauth2/.env
+++ b/generators/prisma-casl/templates/mysql/oauth2/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-SERVER_PORT=3000
+SERVER_PORT=<%= config.serverPort %>
 
 MYSQL_ROOT_USER=root
 MYSQL_PASSWORD=1234
