--- a/generators/prisma/templates/mongodb/jwt/.env
+++ b/generators/prisma/templates/mongodb/jwt/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-SERVER_PORT=3000
+SERVER_PORT=<%= config.serverPort %>
 
 DATABASE_URL="mongodb+srv://test:test@test.erkwlmq.mongodb.net/%3FretryWrites=true&w=majority"
 
