--- a/generators/prisma/templates/postgresql/jwt/.env
+++ b/generators/prisma/templates/postgresql/jwt/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-SERVER_PORT=3000
+SERVER_PORT=<%= config.serverPort %>
 
 POSTGRESQL_ROOT_USER=postgres
 POSTGRESQL_PASSWORD=postgres
